Make sure right-to-left PREreviews are aligned correctly in lists
Refs #645, https://stackoverflow.com/a/41763358/77199

--- a/assets/style.css
+++ b/assets/style.css
@@ -1103,6 +1103,10 @@ skip-link {
   margin-block-start: var(--space-m-l);
   padding-inline-start: 0;
 
+  > li {
+    text-align: initial;
+  }
+
   & article {
     position: relative;
     padding-block: var(--space-xs);
